--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Hello World</title>
   <meta property="og:title" content="Certificate of Completion" />
 <meta property="og:description" content="John Doe completed the AI Course." />
-<meta property="og:image" content="cerfificate.png" />
+<meta property="og:image" content="https://venkatramanr-exp.github.io/cerfificate.png" />
 <meta property="og:url" content="https://yourlms.com/certificate/abc123" />
 
 </head>
